Fixed bug where section titles were not alligned on mobile.

--- a/client/src/components/section-title/section-title.styles.scss
+++ b/client/src/components/section-title/section-title.styles.scss
@@ -19,7 +19,7 @@
 
 @media screen and (max-width: 500px) {
   .section-title {
-    height: 1.8rem;
+    height: 3rem;
 
     span {
       font-size: 3rem;
